@@ -90,8 +90,8 @@ include_once('include/page_header.php');
 	}
 
 	if(isset($_REQUEST['save']) && !isset($_REQUEST['gid'])){
-		$script = "add_graph_item('".
-			zbx_jsvalue($_REQUEST['dstfrm'])."','".
+		$script = "add_graph_item(".
+			zbx_jsvalue($_REQUEST['dstfrm']).",'".
 			$_REQUEST['itemid']."','".
 			$_REQUEST['color']."',".
 			$_REQUEST['drawtype'].",".
@@ -104,9 +104,9 @@ include_once('include/page_header.php');
 	}
 
 	if(isset($_REQUEST['save']) && isset($_REQUEST['gid'])){
-		$script = "update_graph_item('".
-			zbx_jsvalue($_REQUEST['dstfrm'])."','".
-			zbx_jsvalue($_REQUEST['list_name'])."','".
+		$script = "update_graph_item(".
+			zbx_jsvalue($_REQUEST['dstfrm']).",".
+			zbx_jsvalue($_REQUEST['list_name']).",'".
 			$_REQUEST['gid']."','".
 			$_REQUEST['itemid']."','".
 			$_REQUEST['color']."',".
