@@ -1,5 +1,6 @@
 Changes for 1.8.3
 
+ - [ZBX-2482] fixes in chart graphs avg calc (Aly)
  - [ZBX-1477] fixed moving screen elements with spans (Vedmak)
  - [ZBXNEXT-279] added links to parent elements for item and trigger form (Vedmak)
  - [ZBX-2376] port parameter to tcp and tcp_perf is now mandatory (asaveljevs)
